feat: add new endpoint for edit variant
